fixed icon issue not showing

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -47,8 +47,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+html, body {
+  font-family: Roboto, Arial, sans-serif; }
+
 html, body, *, *:before, *:after {
-  font-family: Roboto, Arial, sans-serif;
   box-sizing: border-box; }
 
 .container {
